chore: full project update (code+docs+demo)

--- a/static/index.html
+++ b/static/index.html
@@ -17,9 +17,6 @@
 
         <label class="chk"><input type="checkbox" id="mem" checked> 开启记忆</label>
         <label class="chk"><input type="checkbox" id="tts" checked> 语音播报</label>
-
-        <!-- 可选：只做占位，不再弹窗 -->
-        <button id="addRoleBtn" class="btn ghost" type="button">➕ 自定义角色</button>
         <button id="clearBtn"   class="btn ghost" type="button">🧹 清空会话</button>
       </div>
     </div>
@@ -62,7 +59,7 @@
       <label class="field">
         <span>人格设定（system prompt）</span>
         <textarea id="rsp" rows="8"
-          placeholder="示例：你是诸葛亮，请气智勇，以类比和反问启发思考，避免自给答案。"></textarea>
+          placeholder="示例：你是诸葛亮，语气智勇，以类比和反问启发思考，避免自给答案。"></textarea>
       </label>
 
       <div class="actions">
